<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comcsse483.github.scoutr.fragments.RecordDataFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_field_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_one"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_field_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_field_one" />

        <TextView
            android:id="@+id/text_field_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_field_one"
            android:text="@string/field_two"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_field_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_field_two" />

        <TextView
            android:id="@+id/text_field_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_field_two"
            android:text="@string/field_three"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_field_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_field_three" />

        <TextView
            android:id="@+id/text_field_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_field_three"
            android:text="@string/field_four"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_field_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_field_four" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/record_data_button"
            android:textSize="20sp" />

    </RelativeLayout>

</FrameLayout>
