<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/data_entry_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_holder"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/data_entry_subtract_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/subtract_button_description"
        android:src="@drawable/ic_remove_black_36dp"
        android:layout_below="@+id/data_entry_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/data_entry_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/place_holder"
        android:layout_alignBottom="@+id/data_entry_subtract_button"
        android:layout_toRightOf="@+id/data_entry_subtract_button"
        android:layout_toEndOf="@+id/data_entry_subtract_button" />

    <ImageButton
        android:id="@+id/data_entry_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/add_button_description"
        android:src="@drawable/ic_add_black_36dp"
        android:layout_below="@+id/data_entry_text_view"
        android:layout_toRightOf="@+id/data_entry_value_text_view"
        android:layout_toEndOf="@+id/data_entry_value_text_view" />

    <CheckBox
        android:id="@+id/data_entry_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/data_entry_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>